namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-pom-cases-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-pom-cases-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage-pom-cases"
    cloud-platform.justice.gov.uk/slack-alert-channel: "mpc_alerts_nonprod"
    cloud-platform.justice.gov.uk/application: "Manage POM Cases"
    cloud-platform.justice.gov.uk/owner: "The Elephants - Manage Custody: elephants@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: ""
    cloud-platform.justice.gov.uk/team-name: "manage-pom-cases"
